大修改：让系统由websocket事件驱动，而不是for循环